libstdc++-v3/shadow/pthread.h

  using _C_legacy::pthread_attr_t;
  using _C_legacy::pthread_cond_t;
  using _C_legacy::pthread_condattr_t;
  using _C_legacy::pthread_key_t;
  using _C_legacy::pthread_mutex_t;
  using _C_legacy::pthread_mutexattr_t;
  using _C_legacy::pthread_t;
  using _C_legacy::pthread_mutex_init;
  using _C_legacy::pthread_mutex_destroy;
  using _C_legacy::pthread_mutex_lock;
  using _C_legacy::pthread_mutex_unlock;
  using _C_legacy::pthread_mutexattr_init;
  using _C_legacy::pthread_mutexattr_destroy;
  using _C_legacy::pthread_key_create;
  using _C_legacy::pthread_setspecific;
  using _C_legacy::pthread_getspecific;